<resources>
    <string name="app_name">projeto_shared_preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="id">Id</string>
    <string name="email">Email</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="zipcode">ZipCode</string>
    <string name="user_invalid">Usuario ou senha invalido</string>

</resources>